update 4th lab